--- a/apps/publications/templates/publications/admin_requests.html
+++ b/apps/publications/templates/publications/admin_requests.html
@@ -13,6 +13,17 @@
   <h1 class="page-title">Publication Requests</h1>
   <p class="muted">Review and manage all publication requests.</p>
 
+  {% if messages %}
+  <div class="messages">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">
+        {{ message }}
+      </div>
+    {% endfor %}
+  </div>
+  {% endif %}
+
+
   <div class="tabs">
     <a class="tab {% if not status_filter or status_filter == 'all' %}active{% endif %}" href="{% url 'publications:admin_requests' %}?status=all">
       All <span class="pill">{{ status_counts.total }}</span>
@@ -59,9 +70,12 @@
             <td class="mono">#{{ pub.id }}</td>
 
             <td>
-              <div class="mono">{{ pub.target_content_type.app_label }}/{{ pub.target_content_type.model }}</div>
+              <a href="{% url 'publications:admin_detail' pub.id %}" class="mono">
+                {{ pub.target_content_type.app_label }}/{{ pub.target_content_type.model }}
+              </a>
               <div class="small">object_id={{ pub.target_object_id }}</div>
             </td>
+            
 
             <td class="mono">{{ pub.requested_by.email }}</td>
 
